--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,14 @@
 <h1>Главная страница</h1>
 
 <h3>Used Parts</h3>
+
+<a href="/parts/new_part" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 4px; margin-bottom: 20px;">
+        Добавить деталь
+    </a>
+
+<a href="/parts" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 4px; margin-bottom: 20px;">
+        Все детали
+    </a>
+
 </body>
 </html>
